--- a/CSS-Flexbox-Grid/styles.css
+++ b/CSS-Flexbox-Grid/styles.css
@@ -1,136 +1,427 @@
-/* Estilos del nav bar  */
+/*? Estilos del nav bar  */
 /* ------------------------------- */
-/* sobrescribe el estilo por defecto y establece el padding y el margen a cero */
-
+/** sobrescribe el estilo por defecto y establece el padding y el margen a cero */
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-/* Texto color blanco en todas partes del body*/
-
+/** Texto color blanco en todas partes del body*/
 body {
-    font-family: "lato", sans-serif;
-    color: black;
+  font-family: "lato", sans-serif;
+  color: white;
 }
 
-/* Hacer todo el texto de los links negro y sin decoración osea sin underline */
-
+/** Hacer todo el texto de los links negro y sin decoración osea sin underline */
 a {
-    color: black;
-    text-decoration: none;
+  color: black;
+  /* Quitar decoración a los links */
+  text-decoration: none;
 }
 
 h1 {
-    color: white;
-    font-size: 30px;
-    font-weight: 600;
-    margin: 10px 0; /*arriba abajo 10px, izq der 0px*/
-    line-height: 1.2; /*espaciado*/
+  font-size: 30px;
+  font-weight: 600; 
+  /* arriba abajo 10px, izq der 0px*/
+  margin: 10px 0; 
+  /* espaciado */
+  line-height: 1.2;
 }
 
 h2 {
-    font-size: 25px;
-    font-weight: 300;
-    margin: 10px 0; 
-    line-height: 1.2;
+  font-size: 25px;
+  font-weight: 300;
+  margin: 10px 0; 
+  line-height: 1.2;
 }
 
-p {
-    font-size: 30px;
-}
-
-/* Hacer que todas las imágenes tengan el mismo tamaño que el contenedor donde están */
-
+/** Hacer que todas las imágenes tengan el mismo tamaño que el contenedor donde están */
 img {
-    width: 100%;
+  width: 100%;
 }
 
-/* Remover el estilo a los elementos de una lista */
-
+/** Remover el estilo a los elementos de una lista */
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 p {
-    font-size: 20px;
-    margin: 10px 0;
+  font-size: 20px;
+  margin: 10px 0;
 }
 
+/** Logo en cursiva */
+
+.logo {
+  font-style: italic;
+}
+
+/** Centra el elemento y establece un ancho máximo y se asegura que los elementos puedan fluir através*/
 .container {
-    margin: 0 auto;
-    max-width: 1200px;
-    overflow: visible;
+  margin: 0 auto;
+  /* Si la pantalla mide más de 1200px todo el contenedor no superará esta medida, quedarán espacios en blanco cuando crezca más que esto */
+  max-width: 1200px;
+  overflow: visible;
 }
 
-/* Aplica el color de fondo, altura y "padding a nuestra clase navbar" */
-
+/** Aplica el color de fondo, altura y "padding a nuestra clase navbar" */
 .navbar {
-    background-color: purple;
-    height: 70px;
-    padding: 0 30px;
+  background-color: purple;
+  height: 70px;
+  padding: 0 30px;
 }
 
-/* Establece el tamaño de la fuente (font size), reduce el peso de la fuente (font-weight), agrega margen y alto de línea o espaciado (line height) */
+/** Establece el tamaño de la fuente (font size), reduce el peso de la fuente (font-weight), agrega margen y alto de línea o espaciado (line height) */
 .navbar h1 {
-    font-size: 30px;
-    font-weight: 300;
-    margin: 10px 0;
-    line-height: 1.2;
+  font-size: 30px;
+  font-weight: 300;
+  margin: 10px 0;
+  line-height: 1.2;
 }
 
 .navbar .flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  /* Es como darle un fill container a Skills que es el primer elemento */
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 
-/* colocar login y check course que son los 2 elementos de ul uno al lado del otro */
+/** colocar login y check course que son los 2 elementos de ul uno al lado del otro */
 .navbar ul {
-    display: flex;
+  display: flex;
 }
 
-/* Cambia el color de ambos enlaces a blanco, agrega padding entre si y margen también */
+/** Cambia el color de ambos enlaces a blanco, agrega padding entre si y margen también */
 .navbar a {
-    color: white;
-    padding: 9px;
-    margin: 0 10px;
+  color: white;
+  padding: 9px;
+  margin: 0 10px;
 }
 
-/* Agregar hover con color y underline con el mimso color con 3px de espaciado  */
+/** Agregar hover con color y underline con el mimso color con 3px de espaciado  */
 .navbar a:hover {
-    color: #9867c5;
-    border-bottom: 3px solid #9867c5;
-
+  color: #9867c5;
+  /* Agregar borde abajo porque es un enlace */
+  border-bottom: 3px solid #9867c5;
 }
 
-/* Estilos del área de presentación  */
-/* ------------------------------- */
-
+/*? Estilos del área de presentación  */
+/** ------------------------------- */
 .showcase {
-    height: 300px;
-    background-color: purple;
+  height: 300px;
+  background-color: purple;
 }
 
-/* añade margen bajo el texto */
+/** añade margen bajo el texto */
 .showcase p {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
-/* Añade una sombra bajo la imagen */
+/** Añade una sombra bajo la imagen */
 .showcase img {
-    box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.2);
+  box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.2);
 }
 
-/* Añade algo de padding al contenido del formulario */
+/** Añade algo de padding al contenido del formulario */
 .showcase form {
-    padding-left: 7px;
+  padding-left: 7px;
 }
 
 .grid {
-    overflow: visible;
-    display: grid;
-    grid-template-columns: 60% 40%;
+  /* Si la imagen es más grande que el contenedor esta será visible  */
+  overflow: visible;
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+
+/** definir algo de espacio entre el área de navegación (navigation) y el área de presentación. */
+
+.grid-item-1,
+.grid-item-2 {
+  position: relative;
+  top: 50px;
+}
+
+.showcase input[type='email']{
+  padding: 10px 80px 10px 0;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  padding-left: 6px;
+}
+
+.btn {
+  border-radius: 6px;
+  padding: 12px 20px;
+  background: #9867C5;
+  border: none;
+  margin-left: 10px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+/**Cambiar fuente del texto del formulario */
+.showcase-form{
+  margin: auto;
+}
+
+.litte-info{
+  font-size: 15px;
+  font-family: "poppins", sans-serif;
+}
+
+/*? Estilos de la sección estadísticas  */
+
+.lower-container {
+  margin: 120px auto;
+  padding: 0;
+  max-width: 1400px;
+}
+
+/** Apunta a todos los elementos h3 con clase CSS tittle */
+.title {
+  color: black;
+  font-size: 20px;
+  text-align: left;
+  padding-left: 10px;
+  padding-top: 10px;
+  font-style: italic;
+}
+
+/** Apunta a todos los elementos h3 con clase CSS text */
+.text {
+  color: black;
+  font-size: 19px;
+  width: 100%;
+  padding: 10px;
+  margin: 0, 20px;
+  text-align: justify;
+}
+
+/** Mostrar horizontalmente cada div, poner un poco de espacio alrededor */
+.flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+/**Agregar algo de padding alrededor del contenedor. Alinear el texto al centro*/
+.stats{
+  padding: 45px 50px;
+  text-align: center;
+}
+
+/**Aplicar margen y ancho*/
+.stat{
+  margin: 0 30px;
+  text-align: center;
+  width: 100%; 
+}
+
+.stats .fa {
+  color: purple;
+}
+
+/*? Estilos de la sección testimonios  */
+
+.testimonial {
+  color: black;
+  padding: 40px;
+}
+
+/** Envuelve la imagen dentro de una figura circular y define su altura para que tome todo el alto de su elemento padre */
+
+.testimonial img {
+  height: 100%;
+  clip-path: circle();
+}
+
+/** Alinea el texto al centro */
+
+.testimonial h3{
+  text-align: center;
+}
+
+/** Crear un grid de tres columnas equidistantes. Definir un espaciado de 40px entre ellas */
+
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+
+/* Crear una tarjeta en blanco con sombreado alrededor */
+.card {
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: -7px -7px 20px rgba(0, 0, 0, 0.2),
+               7px  7px 20px rgba(0, 0, 0, 0.2)
+}
+
+.circle {
+  background-color: transparent;
+  border:3px solid purple;
+  height:90px;
+  width:90px;
+  position: relative;
+  top: -30px;
+  left: 120px;
+  border-radius:50%;
+  /* -moz-border-radius:50%;
+  -webkit-border-radius:50%; */
+}
+
+/*? Estilos de la sección footer  */
+
+/**Añadir padding alrededor del footer*/
+footer {
+  background-color: purple;
+  padding: 20px 10px;
+}
+
+/**Configurar todos los textos con link y poner margen a la izquierda y derecha*/
+footer a{
+  color: white;
+  margin: 10px;
+}
+
+/**Margen al texto de los links*/
+footer li{
+  margin-bottom: 10px;
+}
+
+/**Configurar hover a los links*/
+footer a:hover {
+  color: #9867C5;
+  border-bottom: 2px solid #9867C5;
+}
+
+/*? Tablets y pantallas más pequeñas */
+
+@media(max-width: 768px) {
+  .grid,
+  .grid-3 {
+    grid-template-columns: 1fr;
+  }
+
+  /** Alinear todo el texto al centro. Esto moverá todo el texto, incluyendo el formulario al centro.*/
+
+  .showcase {
+    height: auto;
+    text-align: center;
+  }
+
+  /** Esto restablece el ancho del contenedor de la imagen y agrega margen a la izquierda 
+  */ 
+  .image {
+    width: 600px;
+    margin-left: 80px;
+  }
+
+  /* Cambia las secciones de servicio de lado-a-lado para que cada una se posicione en una sóla linea. Centra el texto. */
+
+  .stats .flex {
+    flex-direction: column;
+  }
+
+  .stats {
+    text-align: center;
+  }
+
+  /* Asegura que cada sección en las estadísticas no exceda el ancho del elemento padre. */
+
+  .stat {
+    width: 100%;
+    padding-right: 80px;
+  }
+  
+  /* Mueve el círculo al centro de la tarjeta  */
+
+  .circle {
+    background-color: transparent;
+    border:3px solid purple;
+    height:90px;
+    position: relative;
+    top: -30px;
+    left: 270px;
+    border-radius:50%;
+    /* -moz-border-radius:50%;
+    -webkit-border-radius:50%; */
+    width:90px;
+  }
+
+}
+
+/*? Dispositivos móviles */
+
+@media(max-width: 500px) {
+  .navbar {
+    height: 100px;
+  }
+
+  /* Cambia la alineación. El logo del título se queda en la parte superior, los enlaces de navegación ahora se muestran debajo*/
+
+  .navbar .flex {
+    flex-direction: column;
+  }
+
+  /* Cuando pasamos encima el ratón, retienen el texto blanco y cambia el borde a negro */
+
+  .navbar a:hover {
+    color: white;
+    border-bottom: 2px solid white;
+  }
+
+  /* Establecer el color púrpura para el fondo de los enlaces de navegación, redondear las esquinas de los bordes y darle algo de espaciado*/
+
+  .navbar ul {
+    background: #9867C5;
+    border-radius: 5px;
+    padding: 10px 0;
+  }
+
+  /* Alinear el texto al centro */
+
+  .showcase {
+    height: auto;
+    text-align: center;
+  }
+
+
+/* Reducir el tamaño de la fuente */
+
+.little-info {
+    font-size: 13px;
+  }
+
+
+/* Reducir el ancho de la imágen */
+
+  .image {
+    width: 350px;
+    margin-left: 70px;
+  }
+
+  .stat {
+    margin-bottom: 40px;
+  }
+
+  /* Mover el círculo una vez más */
+
+.circle {
+  background-color: transparent;
+  border:3px solid purple;
+  height:90px;
+  position: relative;
+  top: -30px;
+  left: 150px;
+  border-radius:50%;
+  -moz-border-radius:50%;
+  -webkit-border-radius:50%;
+  width:90px;
+}
 }
